changing the conf_files for summitdev

--- a/scripts/conf_files/omp/LU.conf
+++ b/scripts/conf_files/omp/LU.conf
@@ -6,8 +6,8 @@ export EXPERIMENTS_HOME=$PWD/results/omp
 #compiler
 export CC=pgcc
 export ACCEL_INFO=""
-export EXTRA_CFLAGS="-tp penryn-64"
-export EXTRA_CLINKFLAGS="-tp penryn-64"
+#export EXTRA_CFLAGS="-tp penryn-64"
+#export EXTRA_CLINKFLAGS="-tp penryn-64"
 #export TEST=-n
 
 #benchmark setup
