--- a/scripts/conf_files/omp_summitdev/LU.conf
+++ b/scripts/conf_files/omp_summitdev/LU.conf
@@ -3,6 +3,10 @@
 #experiments folder
 export EXPERIMENTS_HOME=$PWD/results/omp_summitdev
 
+#modules
+module load pgi/17.10
+export OMP_PLACES=cores
+
 #compiler
 export CC=pgcc
 export ACCEL_INFO=""
@@ -13,9 +17,10 @@ export ACCEL_INFO=""
 #benchmark setup
 CLASSES=S W A B C D
 BENCHMARK_SUITE=nas_omp
-THREADS=1 4 8 16 20 120
+THREADS=120
 ENV_THREADS=OMP_NUM_THREADS
 export BENCHMARK_NAME=LU
 export BENCHMARK_EXEC=lu
 export BENCHMARK_FOLDER=$PWD/../NPB-OMP-C/LU
 export DEFINES=""
+RECORD_CPU=1
