--- a/scripts/conf_files/acc_summitdev/LU.conf
+++ b/scripts/conf_files/acc_summitdev/LU.conf
@@ -3,10 +3,13 @@
 #experiments folder
 export EXPERIMENTS_HOME=$PWD/results/acc_summitdev
 
+#module 
+module load pgi/17.10 cuda
+
 #compiler
 export PGI_ACC_TIME=1
 export CC=pgcc
-export ACCEL_INFO=pgaccelinfo
+#export ACCEL_INFO=pgaccelinfo
 export TA=tesla:cc60
 #export EXTRA_CFLAGS="-tp penryn-64"
 #export EXTRA_CLINKFLAGS="-tp penryn-64"
@@ -19,3 +22,4 @@ export BENCHMARK_NAME=LU
 export BENCHMARK_EXEC=lu
 export BENCHMARK_FOLDER=$PWD/../NAS/LU-HP
 export DEFINES="-DCRPL_COMP=0"
+RECORD_CPU=1
