--- a/scripts/conf_files/omp_offloading/LU.conf
+++ b/scripts/conf_files/omp_offloading/LU.conf
@@ -3,6 +3,9 @@
 #experiments folder
 export EXPERIMENTS_HOME=$PWD/results/omp_offloading
 
+#modules
+module load clang cuda
+
 #compiler
 export CC=clang
 #export TEST=-n
@@ -14,3 +17,4 @@ export BENCHMARK_NAME=LU
 export BENCHMARK_EXEC=lu
 export BENCHMARK_FOLDER=$PWD/../NAS-OMP-OFFLOADING/LU-HP
 export DEFINES="-DCRPL_COMP=0"
+RECORD_CPU=1
